# advent-of-code-2022

./: 1.py  2.py  3.py  4.py  5.py  README.md  day10.py  day10_test.py  day5.py  day5_test.py  day6.py  day6_test.py  day7.py  day7_test.py  day8.py  day8_test.py  day9.py  day9_test.py  main.py  pyproject.toml  template.py  testtemplate.py  utils.py
advent2022/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  template.py  testtemplate.py  utils.py
advent2022/tests/: day10_test.py  day11_test.py  day12_test.py  day13_test.py  day14_test.py  day1_test.py  day2_test.py  day3_test.py  day4_test.py  day5_test.py  day6_test.py  day7_test.py  day8_test.py  day9_test.py  testtemplate.py
